# wikiconv-structural-patterns

./: .gitignore  README.md  pyproject.toml
notebooks/: article_metrics.ipynb  chains.ipynb  conversation_graph.ipynb
src/: ca-page.toml  ca-user.toml  config_page.toml  config_user.toml  en-page.toml  en-user.toml  es-page.toml  es-user.toml  it-page.toml  it-user.toml
src/analyzer/: __main__.py  database.py  parser.py  utils.py
src/analyzer/metrics/: __init__.py  metric.py  metric_action_type.py  metric_controller.py  metric_discussion_depth.py  metric_h_index.py  metric_toxicity.py  metric_user_involved.py  metric_vandalism.py  mutual_chain.py
src/analyzer/output/: __init__.py  buffer.py  data.py  database.py  device.py  json_device.py
